Atualização da página de leilão

--- a/item.html
+++ b/item.html
@@ -69,50 +69,31 @@
     </header>
     <main>
         <section class="banner-page" style="background-image: url('inc/img/contrato.jpg');">
-            <div class="container pb-5">
+            <div class="container">
                 <div class="row py-5">
-                    <div class="col-12 col-md-8">
-                        <div class="banner-page-content">
-                            <h2>Repasse 5622.11.2023</h2>
-                            <ul>
-                                <li><i class="fa-solid fa-file-lines"></i> <b>Contrato:</b> Repasse 5622.11.2023</li>
-                                <li><i class="fa-solid fa-clock"></i> Termina em <span class="text-success"><b>7
-                                            dias</b> e <b>8 horas</b></span></li>
-                                <li><i class="fa-solid fa-calendar"></i> <b>Conclusão:</b> <span
-                                        class="text-success"><b>04/01/2024</b> às <b>18:40</b></span></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-4">
+                    <div class="col-12 col-md-5">
                         <div class="banner-page-sidebar">
                             <div class="banner-page-item-cover p-1 bg-light rounded text-center">
-                                <img src="inc/img/contrato.jpg" alt="" class="img-fluid rounded mb-2">
-                                <div class="input-group mb-1">
-                                    <select class="form-select" id="lance">
-                                        <option value="" selected>1.400,00</option>
-                                        <option value="">1.500,00</option>
-                                        <option value="">1.600,00</option>
-                                        <option value="">1.700,00</option>
-                                        <option value="">1.800,00</option>
-                                        <option value="">1.900,00</option>
-                                        <option value="">2.000,00</option>
-                                        <option value="">2.100,00</option>
-                                        <option value="">2.200,00</option>
-                                        <option value="">2.300,00</option>
-                                    </select>
-                                </div>
-                                <a href="#" class="btn btn-success w-100"><i class="fa-solid fa-gavel"></i> Dar meu
-                                    lance</a>
-                                <p class="text-danger mt-2">
-                                    <small><i class="fa-solid fa-triangle-exclamation"></i>Você precisa estar logado
-                                        para
-                                        dar lances!</small>
-                                </p>
-                                <p>Com o valor de lance <b>R$1.500,00</b>, o valor da hora é de <b>R$150,00.</b></p>
-                                <hr>
-                                <p class="text-muted"><small><b>Obs:</b> Valores acima do valor mínimo de lance entrarão
-                                        como valor de
-                                        reserva para lances automáticos.</small></p>
+                                <img src="inc/img/contrato.jpg" alt="" class="img-fluid rounded mb-3">
+                                <h3><i class="fa-solid fa-gavel"></i> Lance atual</h3>
+                                <p class="display-6 text-muted mb-0">R$1400,00</p>
+                                <button type="button" class="btn btn-link p-0" data-bs-toggle="modal"
+                                    data-bs-target="#exampleModal">Ver lances (10)</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-7">
+                        <div class="banner-page-content">
+                            <h2>Título do leilão</h2>
+                            <ul>
+                                <li><i class="fa-solid fa-file-lines"></i> <b>Ficha:</b> Repasse 5622.11.2023</li>
+                                <li><i class="fa-solid fa-clock"></i> Termina em <span class="text-success"><b>7h, 8h,
+                                            54s</b></span></li>
+                                <li><i class="fa-solid fa-calendar"></i> <b>04/01/2024</b> às <b>18:40</b></li>
+                            </ul>
+                            <div class="followers">
+                                <a href="#" class="badge bg-info text-dark me-2">Seguir</a><small><i
+                                        class="fa-solid fa-eye"></i> 8 seguidores</small>
                             </div>
                         </div>
                     </div>
@@ -123,43 +104,50 @@
         <section class="pre-page bg-light">
             <div class="container">
                 <div class="row py-5">
-                    <div class="col-12 col-md-8">
-                        <div class="page-cards d-flex justify-content-between mb-4">
-                            <div class="followers">
-                                <a href="#" class="badge theme-bg-primary me-2">Seguir</a><small class="text-muted"><i
-                                        class="fa-solid fa-eye"></i> 8 seguidores</small>
+                    <div class="col-12 col-md-5"></div>
+                    <div class="col-12 col-md-7">
+                        <div class="page-description">
+                            <p>Com o valor de lance <b>R$1.500,00</b>, o valor da hora é de <b>R$150,00.</b></p>
+                            <div class="input-group" style="max-width: 350px;">
+                                <select class="form-select" id="lance">
+                                    <option value="" selected>1.500,00</option>
+                                    <option value="">1.600,00</option>
+                                    <option value="">1.700,00</option>
+                                    <option value="">1.800,00</option>
+                                    <option value="">1.900,00</option>
+                                    <option value="">2.000,00</option>
+                                    <option value="">2.100,00</option>
+                                    <option value="">2.200,00</option>
+                                    <option value="">2.300,00</option>
+                                </select>
+                                <button class="btn btn-success px-4" type="button"><i class="fa-solid fa-gavel"></i>
+                                    Dar meu
+                                    lance</button>
                             </div>
-                            <div class="payment">
-
-                            </div>
-                        </div>
-                        <div class="row mb-4">
-                            <div class="col-md-6">
-                                <h3><i class="fa-solid fa-gavel"></i> Lance atual</h3>
-                                <p class="display-6 text-muted mb-0">Sem lances</p>
-                                <button type="button" class="btn btn-link p-0" data-bs-toggle="modal"
-                                    data-bs-target="#exampleModal">Ver lances (0)</button>
-                            </div>
-                            <div class="col-md-6">
-                                <p>Ao realizar este lance você tem uma economia de
-                                    <b class="text-success">R$3.500,00 (70% OFF )</b> sobre o preço atual do
-                                    pacote.
-                                </p>
-                                <p><b>Preço atual: <s class="text-danger">R$5000,00</s></b></p>
+                            <p class="text-danger mt-2">
+                                <small><i class="fa-solid fa-triangle-exclamation"></i>Você precisa estar logado
+                                    para
+                                    dar lances!</small>
+                            </p>
+                            <p class="text-muted"><small><b>Obs:</b> Valores acima do valor mínimo de lance entrarão
+                                    como valor de
+                                    reserva para lances automáticos.</small></p>
+                            <hr>
+                            <p>Ao realizar este lance você tem uma economia de
+                                <b class="text-success">R$3.500,00 (70% OFF)</b> sobre o preço atual do
+                                pacote.
+                            </p>
+                            <div class="cart-area">
+                                <p>Ou <button class="btn btn-sm theme-btn-primary px-3"><i class="fa-solid fa-shopping-cart"></i> Compre já</button> por <b>R$5000,00</b></p> 
                             </div>
                         </div>
                         <div class="card-store card border-0">
                             <div class="card-body">
-                                <h5><b>L ACJF Store</b></h5>
-                                <p>Você também pode adquirir o pacote, comprando direto da loja.</p>
                                 <h6><b>Métodos de pagamento</b></h6>
-                                <ul>
-                                    <li><i class="fa-brands fa-pix"></i> Pix</li>
-                                    <li><i class="fa-solid fa-credit-card"></i> Cartão</li>
+                                <ul class="d-flex">
+                                    <li class="me-4"><i class="fa-brands fa-pix"></i> Pix</li>
+                                    <li class="me-4"><i class="fa-solid fa-credit-card"></i> Cartão</li>
                                 </ul>
-                                <div class="display-6 mb-3">R$3.000,00</div>
-                                <a href="#" class="btn theme-btn-primary px-4"><i class="fa-solid fa-cart-shopping"></i>
-                                    Comprar</a>
                             </div>
                         </div>
                     </div>
