--- a/tutorial.html
+++ b/tutorial.html
@@ -74,7 +74,9 @@
                     <div class="col-12 col-md-8">
                         <div class="banner-page-content">
                             <h2>Entenda como funciona</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent eu feugiat elit. Duis dapibus lorem nec nisi feugiat consequat. Aenean ac eros ut tortor consectetur pharetra. Vivamus luctus sit amet elit id imperdiet.</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent eu feugiat elit. Duis
+                                dapibus lorem nec nisi feugiat consequat. Aenean ac eros ut tortor consectetur pharetra.
+                                Vivamus luctus sit amet elit id imperdiet.</p>
                         </div>
                     </div>
                     <div class="col-12 col-md-4">
@@ -83,7 +85,68 @@
             </div>
             <div class="banner-page-overlay"></div>
         </section>
-        
+
+        <section class="bg-light">
+            <div class="container py-5">
+                <div class="row">
+                    <div class="col-12 col-md-6 py-5">
+                        <h2>Passo 01</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce pharetra tincidunt magna, et
+                            sagittis neque dignissim non. Mauris felis ligula, molestie et facilisis vitae, egestas ut
+                            metus.</p>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <a class="venobox youtube-video" data-autoplay="true" data-vbtype="video"
+                            href="https://www.youtube.com/watch?v=BZAN-i_o8nA&t=5s">
+                            <i class="fa fa-play"></i>
+                            <div class="youtube-video-overlay rounded"></div>
+                            <img class="rounded" src="inc/img/leilao-aeroclube-de-juiz-de-fora.jpg" alt="">
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="theme-bg-primary">
+            <div class="container py-5">
+                <div class="row">
+                    <div class="order-1 order-md-0 col-12 col-md-6">
+                        <a class="venobox youtube-video" data-autoplay="true" data-vbtype="video"
+                            href="https://www.youtube.com/watch?v=BZAN-i_o8nA&t=5s">
+                            <i class="fa fa-play"></i>
+                            <div class="youtube-video-overlay rounded"></div>
+                            <img class="rounded" src="inc/img/leilao-aeroclube-de-juiz-de-fora.jpg" alt="">
+                        </a>
+                    </div>
+                    <div class="order-0 order-md-1 col-12 col-md-6 py-5 text-light">
+                        <h2>Passo 02</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce pharetra tincidunt magna, et
+                            sagittis neque dignissim non. Mauris felis ligula, molestie et facilisis vitae, egestas ut
+                            metus.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="bg-light">
+            <div class="container py-5">
+                <div class="row">
+                    <div class="col-12 col-md-6 py-5">
+                        <h2>Passo 03</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce pharetra tincidunt magna, et
+                            sagittis neque dignissim non. Mauris felis ligula, molestie et facilisis vitae, egestas ut
+                            metus.</p>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <a class="venobox youtube-video" data-autoplay="true" data-vbtype="video"
+                            href="https://www.youtube.com/watch?v=BZAN-i_o8nA&t=5s">
+                            <i class="fa fa-play"></i>
+                            <div class="youtube-video-overlay rounded"></div>
+                            <img class="rounded" src="inc/img/leilao-aeroclube-de-juiz-de-fora.jpg" alt="">
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
 
     <!-- Modal -->
