Ajustes de responsividade

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <section class="main-banner" style="background-image: url('inc/img/leilao-aeroclube-de-juiz-de-fora.jpg');">
             <div class="main-banner-content container">
                 <div class="row pt-5">
-                    <div class="col-12 col-md-4 py-5">
+                    <div class="col-12 col-lg-4 py-5 text-center text-lg-start">
                         <h2>Bem vindo!</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eu ornare risus.
                             Phasellus sed dolor mi. Donec laoreet convallis diam sed luctus.</p>
@@ -94,24 +94,21 @@
                             <div class="info-card">
                                 <i class="fa-solid fa-lock"></i>
                                 <h4>Segurança</h4>
-                                <p>Seus dados são protegidos por um dos mais avançados sistemas de segurança da
-                                    informação. Navegue e adquira produtos em nosso site sem preocupações!</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eu ornare risus. Phasellus sed dolor mi. Donec laoreet convallis diam sed luctus.</p>
                             </div>
                         </div>
                         <div class="col-12 col-md-4 middle-card">
                             <div class="info-card">
                                 <i class="fa-solid fa-hand-holding-dollar"></i>
                                 <h4>Economia</h4>
-                                <p>Além da procedência dos ativos à venda, os valores são abaixo do mercado. Um veículo
-                                    seminovo, por exemplo, pode ter economia de até 40% abaixo da Tabela Fipe.</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eu ornare risus. Phasellus sed dolor mi. Donec laoreet convallis diam sed luctus.</p>
                             </div>
                         </div>
                         <div class="col-12 col-md-4">
                             <div class="info-card">
                                 <i class="fa-solid fa-scale-balanced"></i>
                                 <h4>Transparência</h4>
-                                <p>O processo de disputa pelos produtos não tem interferência humana, ou seja, todos os
-                                    participantes têm igualdade de condições no lance ou na proposta.</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eu ornare risus. Phasellus sed dolor mi. Donec laoreet convallis diam sed luctus.</p>
                             </div>
                         </div>
                     </div>
@@ -123,7 +120,7 @@
         <section class="bg-video">
             <div class="container">
                 <div class="row justify-content-center py-5">
-                    <div class="col-12 col-md-6">
+                    <div class="col-12 col-lg-6">
                         <h3 class="text-center mb-4"><b>Como funciona:</b></h3>
                         <a class="venobox youtube-video" data-autoplay="true" data-vbtype="video"
                             href="https://www.youtube.com/watch?v=BZAN-i_o8nA&t=5s">
@@ -152,7 +149,7 @@
                         <h2 class="title-page text-center mb-5">Leilões disponíveis</h2>
                     </div>
                 </div>
-                <div class="items-list">
+                <div class="items-list mb-4">
 
                     <!-- Item card: leilão -->
                     <div class="product-item card border-0 shadow-sm">
@@ -315,19 +312,33 @@
                     </div>
 
                 </div>
+
+                <div class="items-nav d-flex justify-content-center">
+                    <nav aria-label="Navegação de leilões">
+                        <ul class="pagination">
+                            <li class="page-item"><a class="page-link" href="#"><i class="fa fa-chevron-left"></i></a>
+                            </li>
+                            <li class="page-item"><a class="page-link" href="#">1</a></li>
+                            <li class="page-item"><a class="page-link" href="#">2</a></li>
+                            <li class="page-item"><a class="page-link" href="#">3</a></li>
+                            <li class="page-item"><a class="page-link" href="#"><i class="fa fa-chevron-right"></i></a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
             </div>
         </section>
     </main>
     <footer class="theme-bg-primary py-5 text-light">
         <section class="container mb-5">
             <div class="row">
-                <div class="col-12 col-md-3 text-center">
+                <div class="col-12 col-lg-3 text-center mb-4 order-1">
                     <img src="inc/img/acjf.png" alt="" class="mb-3">
                     <h4>Aeroclube de Juiz de Fora</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eu ornare risus. Phasellus
                         sed dolor mi. Donec laoreet convallis diam sed luctus.</p>
                 </div>
-                <div class="col-12 col-md-3 px-5">
+                <div class="col-12 col-lg-3 text-center text-lg-start px-4 mb-4 order-2">
                     <h6>Atendimento ao cliente</h6>
                     <ul>
                         <li>
@@ -347,7 +358,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="col-12 col-md-3 px-5">
+                <div class="col-12 col-lg-3 text-center text-lg-start px-4 mb-4 order-3">
                     <h6>Contato</h6>
                     <ul>
                         <li><i class="fa-solid fa-location-dot"></i> Av. Prefeito Mello Reis, 311</li>
@@ -356,7 +367,7 @@
                         <li><i class="fa-solid fa-envelope"></i> contato@aeroclubejf.com.br</li>
                     </ul>
                 </div>
-                <div class="col-12 col-md-3 px-5">
+                <div class="col-12 col-lg-3 text-center px-4 mb-4 order-0 order-lg-4 d-flex justify-content-center">
                     <ul class="social-list">
                         <li>
                             <a href="#">
