--- a/tutorial.html
+++ b/tutorial.html
@@ -71,8 +71,8 @@
         <section class="banner-page" style="background-image: url('inc/img/contrato.jpg');">
             <div class="container pb-5">
                 <div class="row py-5">
-                    <div class="col-12 col-md-8">
-                        <div class="banner-page-content">
+                    <div class="col-12 col-lg-8">
+                        <div class="banner-page-content text-center text-lg-start">
                             <h2>Entenda como funciona</h2>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent eu feugiat elit. Duis
                                 dapibus lorem nec nisi feugiat consequat. Aenean ac eros ut tortor consectetur pharetra.
@@ -89,13 +89,13 @@
         <section class="bg-light">
             <div class="container py-5">
                 <div class="row">
-                    <div class="col-12 col-md-6 py-5">
+                    <div class="col-12 col-lg-6 py-5 text-center text-lg-start">
                         <h2>Passo 01</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce pharetra tincidunt magna, et
                             sagittis neque dignissim non. Mauris felis ligula, molestie et facilisis vitae, egestas ut
                             metus.</p>
                     </div>
-                    <div class="col-12 col-md-6">
+                    <div class="col-12 col-lg-6">
                         <a class="venobox youtube-video" data-autoplay="true" data-vbtype="video"
                             href="https://www.youtube.com/watch?v=BZAN-i_o8nA&t=5s">
                             <i class="fa fa-play"></i>
@@ -109,7 +109,7 @@
         <section class="theme-bg-primary">
             <div class="container py-5">
                 <div class="row">
-                    <div class="order-1 order-md-0 col-12 col-md-6">
+                    <div class="order-1 order-lg-0 col-12 col-lg-6">
                         <a class="venobox youtube-video" data-autoplay="true" data-vbtype="video"
                             href="https://www.youtube.com/watch?v=BZAN-i_o8nA&t=5s">
                             <i class="fa fa-play"></i>
@@ -117,7 +117,7 @@
                             <img class="rounded" src="inc/img/leilao-aeroclube-de-juiz-de-fora.jpg" alt="">
                         </a>
                     </div>
-                    <div class="order-0 order-md-1 col-12 col-md-6 py-5 text-light">
+                    <div class="order-0 order-lg-1 col-12 col-lg-6 py-5 text-light text-center text-lg-start">
                         <h2>Passo 02</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce pharetra tincidunt magna, et
                             sagittis neque dignissim non. Mauris felis ligula, molestie et facilisis vitae, egestas ut
@@ -129,13 +129,13 @@
         <section class="bg-light">
             <div class="container py-5">
                 <div class="row">
-                    <div class="col-12 col-md-6 py-5">
+                    <div class="col-12 col-lg-6 py-5 text-center text-lg-start">
                         <h2>Passo 03</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce pharetra tincidunt magna, et
                             sagittis neque dignissim non. Mauris felis ligula, molestie et facilisis vitae, egestas ut
                             metus.</p>
                     </div>
-                    <div class="col-12 col-md-6">
+                    <div class="col-12 col-lg-6">
                         <a class="venobox youtube-video" data-autoplay="true" data-vbtype="video"
                             href="https://www.youtube.com/watch?v=BZAN-i_o8nA&t=5s">
                             <i class="fa fa-play"></i>
@@ -196,13 +196,13 @@
     <footer class="theme-bg-primary py-5 text-light">
         <section class="container mb-5">
             <div class="row">
-                <div class="col-12 col-md-3 text-center">
+                <div class="col-12 col-lg-3 text-center mb-4 order-1">
                     <img src="inc/img/acjf.png" alt="" class="mb-3">
                     <h4>Aeroclube de Juiz de Fora</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eu ornare risus. Phasellus
                         sed dolor mi. Donec laoreet convallis diam sed luctus.</p>
                 </div>
-                <div class="col-12 col-md-3 px-5">
+                <div class="col-12 col-lg-3 text-center text-lg-start px-4 mb-4 order-2">
                     <h6>Atendimento ao cliente</h6>
                     <ul>
                         <li>
@@ -222,7 +222,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="col-12 col-md-3 px-5">
+                <div class="col-12 col-lg-3 text-center text-lg-start px-4 mb-4 order-3">
                     <h6>Contato</h6>
                     <ul>
                         <li><i class="fa-solid fa-location-dot"></i> Av. Prefeito Mello Reis, 311</li>
@@ -231,7 +231,7 @@
                         <li><i class="fa-solid fa-envelope"></i> contato@aeroclubejf.com.br</li>
                     </ul>
                 </div>
-                <div class="col-12 col-md-3 px-5">
+                <div class="col-12 col-lg-3 text-center px-4 mb-4 order-0 order-lg-4 d-flex justify-content-center">
                     <ul class="social-list">
                         <li>
                             <a href="#">
