Correção nas visualizações

--- a/item.html
+++ b/item.html
@@ -92,8 +92,8 @@
                                 <li><i class="fa-solid fa-calendar"></i> <b>04/01/2024</b> às <b>18:40</b></li>
                             </ul>
                             <div class="followers">
-                                <a href="#" class="badge bg-info text-dark me-2">Seguir</a><small><i
-                                        class="fa-solid fa-eye"></i> 8 seguidores</small>
+                                <a href="#" class="badge bg-info text-dark me-2">Seguir</a><small><i class="fa-solid fa-heart"></i> 8 seguidores | <i
+                                        class="fa-solid fa-eye"></i> 38 visualizações</small>
                             </div>
                         </div>
                     </div>
